# shellous

./: Cargo.toml
.agents/: ARCHITECTURE.md  CODEBASE.md  CONVENTIONS.md
src/: bar.rs  bar_shader.glsl  bar_shader.rs  canvas.rs  compositor.rs  display.rs  egl_state.rs  hyprland.rs  layer_surface.rs  main.rs  managed_surface.rs  renderer.rs  shader.rs  shell.rs  shell_state.rs  surface_id.rs  ui.rs  vert_shader.glsl  wayland.rs  workspace.rs
src/components/: arena.rs  canvas.rs  keyed_list.rs  layout_tree.rs  mod.rs  rect.rs  row.rs  ui.rs
src/components/bar/: element.rs  left.rs  middle.rs  mod.rs  state.rs  workspace_dot.rs
src/components/bar/left/: mod.rs  workspace_dot.rs
src/components/bar/middle/: mod.rs
src/components/base/: align.rs  alignment.rs  column.rs  group.rs  mod.rs  padding.rs  rect.rs  row.rs  stacks.rs  text.rs
src/components/layout/: align.rs  alignment.rs  group.rs  mod.rs  padding.rs  row.rs  stacks.rs
src/renderer/: batch.rs  mod.rs  renderer.rs  text.rs  types.rs
src/renderer/animation/: animated.rs  cache.rs  easing.rs  mod.rs
src/renderer/elements/: bar_panel.rs  mod.rs
src/renderer/panel/: bar.rs  mod.rs
src/renderer/programs/: circle.rs  mod.rs  program.rs  rect.rs  rest.glsl  text.rs
src/renderer/shaders/: circle.frag  circle.vert  rect.frag  rect.vert  text.frag  text.vert
src/services/: clock.rs  hyprland.rs  mod.rs  tray.rs  workspace.rs
src/shell/: action.rs  compositor.rs  egl.rs  event.rs  layer_surface.rs  managed_surface.rs  mod.rs  runtime.rs  state.rs  surface.rs  surface_id.rs  wayland.rs  xdg_surface.rs
(+8 files in other folders)
