[package]
name = "shellous"
version = "0.1.0"
edition = "2024"

[dependencies]
fontdue = "0.9.3"
gl = "0.14.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libc = "0.2"
libloading = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wayland-client = "0.31.14"
wayland-egl = "0.32.11"
wayland-protocols = { version = "0.31", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
